moved home button to banner"bar"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
+{% capture link_url %}https://github.com/RRZE-HPC/stempel_data_collection/tree/master/stencils/{{page.dimension}}/{{page.radius}}/{{page.weighting}}/{{page.kind}}/{{page.coefficients}}/{{page.datatype}}/{{page.machine}}{% endcapture %}
+
+{% capture link_text %}{{page.dimension}} / {{page.radius}} / {{page.weighting}} / {{page.kind}} / {{page.coefficients}} / {{page.datatype}} / {{page.machine}}{% assign flavor_size = {{page.flavor | size}} %}{% if flavor_size != 0 %} / {{page.flavor}}{% endif %}{% endcapture %}
+
 <div id="navbar">
-<a href="{{site.baseurl}}/" id="head-left">« go home</a>
-<span id="head-right"><a href="https://github.com/RRZE-HPC/stempel_data_collection/tree/master/stencils/{{page.dimension}}/{{page.radius}}/{{page.weighting}}/{{page.kind}}/{{page.coefficients}}/{{page.datatype}}/{{page.machine}}">{{page.dimension}} / {{page.radius}} / {{page.weighting}} / {{page.kind}} / {{page.coefficients}} / {{page.datatype}} / {{page.machine}}{% assign flavor_size = {{page.flavor | size}} %}{% if flavor_size != 0 %} / {{page.flavor}} {% endif %}</a></span>
+<a href="{{linkurl}}">{{link_text}}</a>
 </div>
