--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,9 @@
       </header>
 
       <div id="banner">
-        <span id="logo"></span>
-
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View this repository On GitHub</strong></a>
         <a href="https://github.com/RRZE-HPC/stempel" class="button fork stempel"><strong>View the stempel repository On GitHub</strong></a>
+        <a id="logo" class="fork" href="{{site.baseurl}}/">⌂</a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
@@ -52,16 +51,5 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
-    {% if site.google_analytics %}
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
   </body>
 </html>
