--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -312,12 +312,7 @@ header {
     background-color: #ddd;
     color: #333;
     margin: 7px 10px;
-    margin-right: 20px;
     float: right;
-  }
-
-  .stempel {
-    margin: 7px 10px;
   }
 
   .downloads {
@@ -354,14 +349,16 @@ header {
   }
 
   #logo {
-    position: relative;
-    float: right;
-    height: 36px;
-    width: 36px;
-    right: 7px;
-    top: 7px;
-    display: block;
-    background: url(../images/octocat-logo.svg);
+    border: 1px solid #bbb;
+    border-radius: 2px;
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .4), 0px 1px 1px rgba(0, 0, 0, .1);
+    padding: 0px 5px;
+    line-height: 32px;
+    font-size: 32px;
+    color: #333;
+    font-weight: bold;
+    display: inline-block;
+    text-align: center;
   }
 
 }
@@ -532,17 +529,9 @@ footer {
   padding: 2px 5px;
 }
 
-#head-left {
-  float: left;
-}
-
-#head-right {
-  float: right;
-  max-width: 80%;
-}
-
 #navbar {
   overflow: hidden;
+  max-width: 90%;
 }
 
 #navigation {
