--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,35 @@
     <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
+      <script src="https://cdn!js.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <script>
+  function apply_options() {
+      var elems = document.getElementsByClassName('nav-selection-dropdowns');
+      var i;
+      for (i = 0; i < elems.length; i++) {
+        var val = elems[i].options[elems[i].selectedIndex].value
+        if (!String(val).endsWith("all"))
+          toggle_visibility(val);
+      }
+      return true;
+  }
+  window.addEventListener('beforeunload', function (e) {
+  // Cancel the event
+  e.preventDefault();
+  // Chrome requires returnValue to be set
+  e.returnValue = '';
 
+  var elems = document.getElementsByClassName('nav-selection-dropdowns');
+  var i;
+  for (i = 0; i < elems.length; i++) {
+    var val = elems[i].options[elems[i].selectedIndex].value
+    if (!String(val).endsWith("all"))
+      toggle_visibility(val);
+    }
+  });
+  </script>
   </head>
   <body>
 
