--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -212,7 +212,7 @@ td {
     border-left: 1px solid #e5e5e5;
   }
 
-  &:nth-child(2) {
+  &:last-child {
     font-weight: bold;
     text-align: right;
   }
