Project renamed to INSPECT

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -259,6 +259,16 @@ header {
     -ms-text-overflow: ellipsis;
   }
 
+  h1:before {
+    background-image: url({{ '/assets/img/inspect-white.svg' | relative_url }});
+    background-size: 35px 35px;
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+    content: "";
+  }
+
   p {
     color: #d8d8d8;
     text-shadow: rgba(#000, 0.2) 0 1px 0;
