--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,28 +12,25 @@
       <script src="https://cdn!js.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="{{ '/assets/js/headroom.js' | relative_url }}"></script>
   </head>
   <body>
-
-      <header>
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-      </header>
+    <header class="headroom">
+      <h1 class="headroom">{{ site.title | default: site.github.repository_name }}</h1>
+      <p>{{ site.description | default: site.github.project_tagline }}</p>
       {% if page.path != "index.md" %}
       <div id="banner">
         <a id="logo" class="fork" href="{{site.baseurl}}/">⌂</a>
         {% include header.html %}
-        {% if site.show_downloads %}
-          <div class="downloads">
-            <span>Downloads:</span>
-            <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
-            </ul>
-          </div>
-        {% endif %}
       </div><!-- end banner -->
       {% endif %}
+    </header>
+
+    <script>
+      var myElement = document.querySelector("header");
+      var headroom  = new Headroom(myElement);
+      headroom.init();
+    </script>
 
     <div class="wrapper">
       <nav>
