small fixes to stylesheet

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -663,27 +663,13 @@ footer {
       line-height: 20px;
 
       &::-webkit-details-marker {
-        display: none;
-      }
-
-      &:after {
-        content: url({{ '/assets/img/checkbox-plus.png' | relative_url }});
-        float: left;
-        margin-right: 10px;
-        line-height: 20px;
-        width: 15px;
-        height: 20px;
+        padding-left: 3px;
       }
 
     }
 
     &[open] {
       margin-bottom: -10px;
-
-      & > summary:after {
-        content: url({{ '/assets/img/checkbox-minus.png' | relative_url }});
-      }
-
     }
 
     ul {
