--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -459,6 +459,10 @@ header {
   text-align: center;
 }
 
+input[type="button"]:focus, input[type="button"]:active {
+  box-shadow: 0 0 5px #005cae;
+}
+
 section {
   margin: 20px 0;
   margin-top: 190px;
