--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="headroom">
-      <h1 class="headroom">{{ site.title | default: site.github.repository_name }}</h1>
+      <h1 class="headroom"><a href="{{site.baseurl}}/">{{ site.title | default: site.github.repository_name }}</a></h1>
       <p>{{ site.description | default: site.github.project_tagline }}</p>
       {% if page.path != "index.md" %}
       <div id="banner">
